--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,11 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Electron</title>
+    <title>OMS</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
+      content="
+        default-src 'self';
+        connect-src 'self' https://p2304362.dc-yan.top/oms/ http://127.0.0.1:8000;
+        script-src 'self';
+        style-src 'self' 'unsafe-inline';
+        img-src 'self' data;
+      "
     />
   </head>
 
