Order System Finished

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -11,7 +11,7 @@
         connect-src 'self' https://p2304362.dc-yan.top/oms/ http://127.0.0.1:8000;
         script-src 'self';
         style-src 'self' 'unsafe-inline';
-        img-src 'self' data;
+        img-src 'self' data: http://www.w3.org/2000/svg  'unsafe-inline';
       "
     />
   </head>
